--- a/NControlDemo/NControlDemo.WindowsStore/packages.config
+++ b/NControlDemo/NControlDemo.WindowsStore/packages.config
@@ -5,5 +5,7 @@
   <package id="SharpDX.Direct2D1" version="2.6.3" targetFramework="win81" />
   <package id="SharpDX.Direct3D11" version="2.6.3" targetFramework="win81" />
   <package id="SharpDX.DXGI" version="2.6.3" targetFramework="win81" />
+  <package id="TinyIoC" version="1.3" targetFramework="win81" developmentDependency="true" />
   <package id="Xamarin.Forms" version="1.4.3.6374" targetFramework="win81" />
+  <package id="Xamarin.Forms.Maps" version="1.4.3.6374" targetFramework="win81" />
 </packages>
