--- a/NControl/NControl.nuspec
+++ b/NControl/NControl.nuspec
@@ -3,7 +3,7 @@
    <metadata minClientVersion="2.8.1">
        <id>NControl</id>
     <version>0.5.981</version>
-    <authors>Christian Falch</authors>
+    <authors>Christian Falch, Henrik Ilgen, Adam (awolf), BlueRaja, Frank Neuman</authors>
     <owners>Christian Falch</owners>
     <licenseUrl>https://github.com/chrfalch/NControl/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/chrfalch/NControl/</projectUrl>    
