--- a/NControlDemo/NControlDemo.FormsApp/NControlDemo.FormsApp.csproj
+++ b/NControlDemo/NControlDemo.FormsApp/NControlDemo.FormsApp.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Controls\BlueFrameControl.cs" />
+    <Compile Include="Controls\GalleryView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IoC\Container.cs" />
     <Compile Include="IoC\IContainerProvider.cs" />
