--- a/NControlDemo/NControlDemo.Droid/packages.config
+++ b/NControlDemo/NControlDemo.Droid/packages.config
@@ -3,10 +3,13 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid5" />
   <package id="NGraphics" version="0.3.1" targetFramework="monoandroid5" />
   <package id="TinyIoC" version="1.3" targetFramework="monoandroid5" developmentDependency="true" />
-  <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="monoandroid5" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.2.1.0" targetFramework="monoandroid5" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.2.1.0" targetFramework="monoandroid5" />
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="monoandroid5" />
-  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="monoandroid5" />
-  <package id="Xamarin.GooglePlayServices" version="22.0.0.2" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="monoandroid5" />
+  <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="monoandroid5" />
+  <package id="Xamarin.Forms.Maps" version="2.0.0.6490" targetFramework="monoandroid5" />
+  <package id="Xamarin.GooglePlayServices.Base" version="26.0.0.0" targetFramework="monoandroid5" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="26.0.0.0" targetFramework="monoandroid5" />
 </packages>
